# my-spotify-journey

./: Dockerfile  Makefile  README.md  docker-compose.yml  load_data.py  package-lock.json  pyproject.toml  run.py
backend/: __init__.py  db_utils.py  ingestion.py  insights.py  main.py
backend/db/: duckdb_helper.py
backend/llm/: chains.py  langchain_integration.py  openrouter_client.py  schemas.py
dashboard/: chart_config.py  components.py  data_transformations.py  data_types.py  db_streamlit.py  db_utils.py  debug_utils.py  filters.py  llm_insights.py  queries.py  query_manager.py  streamlit_app.py  ui_test.py  utils.py  visualization_mapper.py  visualizations.py
dashboard/tabs/: README.md  __init__.py  albums_tab.py  artists_tab.py  genres_tab.py  llm_tab.py  overview_tab.py  polars_ai_tab.py  release_tab.py  shared_imports.py  stats_tab.py  time_tab.py  tracks_tab.py
tests/: test_ingestion.py
